fix: Change the spacing in the detail page

--- a/src/ComplaintDetail.less
+++ b/src/ComplaintDetail.less
@@ -14,6 +14,7 @@
 .card-container {
   max-width: 100%;
   padding: @gutter-normal;
+  margin-bottom: @grid_gutter-width;
 
   nav {
     width: 100%;
@@ -39,9 +40,10 @@
 
   h1 {
     margin: @gutter-normal 0;
+    margin-top: @grid_gutter-width;
   }
 
-  h3.company-information {
+  h2.company-information {
     margin-top: @gutter-wide;
   }
 
